@@ -1,6 +1,7 @@
 
 			     BZFlag release notes
 * add new updates here without heading until a release
+* self destruct key, for stuck tanks - Dave Brosius
 * team killers die - Tim Riker
 * increase max player and robot counts - Tim Riker
 * Fix 'Change Key Mapping' arrowkeys - Andrew Greig 
